[package]
name = "turbogate"
version = "0.1.0"
edition = "2025"
authors = ["izuna <dkapitsev@gmail.com>"]
description = "High-performance L4 load balancer compatible with HAProxy"
license = "MIT"
repository = "https://github.com/Deplee/turbogate"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "time", "chrono"] }
anyhow = "1.0"
thiserror = "1.0"
futures = "0.3"
async-trait = "0.1"
dashmap = "5.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
metrics = "0.21"
metrics-exporter-prometheus = "0.12"
rustls = "0.21"
rustls-pemfile = "1.0"
tokio-rustls = "0.24"
config = "0.13"
regex = "1.0"
ipnetwork = "0.20"
cidr-utils = "0.6"
rand = "0.8"
http = "0.2"
httparse = "1.8"
bytes = "1.0"
flate2 = "1.0"
brotli2 = "0.3"
url = "2.4"
hyper = { version = "0.14", features = ["full"] }
http-body = "0.4"
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.4", features = ["compression-br", "compression-gzip", "compression-deflate", "cors", "trace"] }
notify = "6.1"
governor = "0.6"
quinn = "0.10"
rustls-pki-types = "0.1"
rcgen = "0.11"
